tests/compile_tests/invalid_type.rs
use int_enum::*;

#[int_enum(f64)]
enum InvalidType {
    One = 1,
    Two = 2,
}

fn main() {}
